--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "~TODO~",
+  "name": "fireboxz",
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev",
@@ -16,5 +16,73 @@
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
-  "type": "module"
+  "type": "module",
+  "description": "Everything you need to build a Svelte project, powered by [`create-svelte`](https://github.com/sveltejs/kit/tree/master/packages/create-svelte);",
+  "main": "svelte.config.js",
+  "dependencies": {
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.2",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "binary-extensions": "^2.2.0",
+    "balanced-match": "^1.0.2",
+    "chalk": "^4.1.1",
+    "callsites": "^3.1.0",
+    "cheap-watch": "^1.0.3",
+    "chokidar": "^3.5.1",
+    "color-name": "^1.1.4",
+    "color-convert": "^2.0.1",
+    "colorette": "^1.2.2",
+    "concat-map": "^0.0.1",
+    "detect-indent": "^6.1.0",
+    "debug": "^4.3.2",
+    "estree-walker": "^2.0.2",
+    "fill-range": "^7.0.1",
+    "esbuild": "^0.12.7",
+    "glob": "^7.1.7",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "has-flag": "^4.0.0",
+    "glob-parent": "^5.1.2",
+    "hash-sum": "^2.0.0",
+    "has": "^1.0.3",
+    "inflight": "^1.0.6",
+    "import-fresh": "^3.3.0",
+    "inherits": "^2.0.4",
+    "is-core-module": "^2.4.0",
+    "is-binary-path": "^2.1.0",
+    "is-glob": "^4.0.1",
+    "min-indent": "^1.0.1",
+    "is-number": "^7.0.0",
+    "is-extglob": "^2.1.1",
+    "minimist": "^1.2.5",
+    "minimatch": "^3.0.4",
+    "mri": "^1.1.6",
+    "ms": "^2.1.2",
+    "nanoid": "^3.1.23",
+    "once": "^1.4.0",
+    "normalize-path": "^3.0.0",
+    "parent-module": "^1.0.1",
+    "path-is-absolute": "^1.0.1",
+    "picomatch": "^2.3.0",
+    "path-parse": "^1.0.7",
+    "postcss": "^8.3.0",
+    "require-relative": "^0.8.7",
+    "readdirp": "^3.5.0",
+    "resolve-from": "^4.0.0",
+    "resolve": "^1.20.0",
+    "rollup": "^2.51.1",
+    "slash": "^4.0.0",
+    "sade": "^1.7.4",
+    "source-map": "^0.7.3",
+    "source-map-js": "^0.6.2",
+    "supports-color": "^7.2.0",
+    "strip-indent": "^3.0.0",
+    "to-regex-range": "^5.0.1",
+    "svelte-hmr": "^0.14.4",
+    "vite": "^2.3.6",
+    "wrappy": "^1.0.2"
+  },
+  "author": "",
+  "license": "ISC"
 }
